<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.stimper.vincent.soccerprediction.MainActivity"
    tools:showIn="@layout/app_bar_main">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/league"
            android:textSize="@dimen/font_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:stretchColumns="*"
            android:layout_below="@id/league"
            android:layout_marginTop="5dp"
            android:id="@+id/inputTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.stimper.vincent.soccerprediction.MainActivity">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/teamA_text" />

                <Spinner
                    android:id="@+id/teamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_distance">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/goalA_text" />

                <Spinner
                    android:id="@+id/goalA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_distance">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/teamB_text" />

                <Spinner
                    android:id="@+id/teamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_distance">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size"
                    android:text="@string/goalB_text" />

                <Spinner
                    android:id="@+id/goalB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/certainty_group"
            android:layout_below="@id/inputTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/certainty_text"
                android:textSize="@dimen/font_size"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/certainty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/predict"
            android:layout_below="@id/certainty_group"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/prediction_group"
            android:layout_below="@id/predict"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/result_table"
                android:layout_centerHorizontal="true"
                android:layout_width="270dp"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:id="@+id/result_text"
                        android:textSize="@dimen/font_size"
                        android:layout_width="90dp"/>
                    <TextView
                        android:text="@string/win"
                        android:textSize="@dimen/font_size"
                        android:layout_width="60dp" />
                    <TextView
                        android:text="@string/draw"
                        android:textSize="@dimen/font_size"
                        android:layout_width="60dp" />
                    <TextView
                        android:text="@string/loss"
                        android:textSize="@dimen/font_size"
                        android:layout_width="60dp" />
                </TableRow>

                <View
                    android:layout_height="2dp"
                    android:background="#90000000" />  <!-- #FF909090 -->

                <TableRow>
                    <TextView
                        android:id="@+id/result"
                        android:textSize="@dimen/font_size"/>
                    <TextView
                        android:id="@+id/odds_win"
                        android:textSize="@dimen/font_size"/>
                    <TextView
                        android:id="@+id/odds_draw"
                        android:textSize="@dimen/font_size"/>
                    <TextView
                        android:id="@+id/odds_loss"
                        android:textSize="@dimen/font_size"/>
                </TableRow>

            </TableLayout>

            <com.stimper.vincent.soccerprediction.charting.PieChart
                android:id="@+id/pie_chart"
                android:textSize="@dimen/font_size"
                android:layout_below="@id/result_table"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_width="240dp"
                android:layout_height="240dp" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>

</RelativeLayout>